--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
